--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Brandon's Portfolio</title>
@@ -50,7 +50,7 @@
                <a href="project1.html">
                 <div class = "card">
                     <div class = "content">
-                        <h2>Birds of a Feather</h1>
+                        <h2>Birds of a Feather</h2>
                     </div>
                     <div class = "image">
                         <img src = "img/feather.png" alt="Birds of a Feather">
@@ -61,7 +61,7 @@
                <a href="project2.html">
                 <div class = "card">
                     <div class = "content">
-                        <h2>NYC Taxi Utiliation Analysis</h1>
+                        <h2>NYC Taxi Utiliation Analysis</h2>
                     </div>
                     <div class = "image">
                       <img src = "img/taxi.webp" alt="taxi">
@@ -72,7 +72,7 @@
                <a href="project3.html">
                 <div class = "card">
                     <div class = "content">
-                        <h2>Pokemon Simulator</h1>
+                        <h2>Pokemon Simulator</h2>
                     </div>
                     <div class = "image">
                       <img src = "img/pokemon2.jpeg" alt="pokemon">
@@ -99,7 +99,7 @@
                 <label for="email">Email:</label><br>
                 <input type="text" id="email" name="email"><br>
                 <label for="msg">Message:</label><br>
-                <textarea id="w3review" name="w3review" rows="1" cols="50">Enter your message
+                <textarea id="msg" name="msg" rows="1" cols="50">Enter your message
                 </textarea>
                 <!-- <input\ type="msg" id="msg" name="msg"><br> -->
                 <input type="submit" value="Send" /><br>
@@ -111,7 +111,7 @@
         <a href="mailto:brandonkoh99@gmail.com"><i class="uil uil-envelope"></i></a>
         <a href="https://www.instagram.com/brandonkoh__/"><i class="uil uil-instagram"></i></a>
         <a href="https://github.com/B-Koh"><i class="uil uil-github"></i></a>
-        <a href="img/Brandon_Resume.pdf"><i class="uil uil-file-alt"></i></i></a>
+        <a href="img/Brandon_Resume.pdf"><i class="uil uil-file-alt"></i></a>
 
 
           
